# socketutility

./: .gitignore  CMakeLists.txt
samples/: tcpclient.cpp  tcpserver.cpp  udpclient.cpp  udpserver.cpp
src/: socketbase.cpp  socketbase.h
